--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+  <link id="theme" rel="stylesheet">
   <base href="/">
 
 </head>
@@ -20,7 +20,7 @@
   </div>
 
   <app-root></app-root>
-  
+
   <script src="assets/plugins/jquery/jquery.min.js"></script>
   <script src="assets/plugins/bootstrap/js/popper.min.js"></script>
   <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
@@ -29,6 +29,6 @@
   <script src="assets/js/sidebarmenu.js"></script>
   <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
   <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-  <script src="assets/js/custom.min.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 </html>
